fix: dark mode login page background

--- a/ui/src/styles/index.scss
+++ b/ui/src/styles/index.scss
@@ -33,7 +33,7 @@
 html {
   &.dark {
     body {
-      background: linear-gradient(theme('colors.vines.500/0.15') 5%, theme('colors.gray.2') 50%);
+      @apply bg-gray-2
     }
   }
 }
